--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,51 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
-	}
+		"moduleResolution": "bundler",
+		"plugins": [
+			{
+				"name": "typescript-svelte-plugin"
+			}
+		],
+		"paths": {
+			"$/*": [
+				"./src/*"
+			],
+			"$lib": [
+				"./src/lib"
+			],
+			"$lib/*": [
+				"./src/lib/*"
+			],
+			"$app": [
+				"./node_modules/@sveltejs/kit/types"
+			],
+			"$app/*": [
+				"./node_modules/@sveltejs/kit/types/index.d.ts"
+			],
+			"anchorme": [
+				"./node_modules/anchorme/dist/node/index.d.ts"
+			]
+		},
+	},
+	"include": [
+		"./.svelte-kit/ambient.d.ts",
+		"./.svelte-kit/types/**/$types.d.ts",
+		"./src/**/*.js",
+		"./src/**/*.ts",
+		"./src/**/*.svelte",
+		"./tests/**/*.js",
+		"./tests/**/*.ts",
+		"./tests/**/*.svelte",
+		"./prisma/**/*.ts",
+		"./types/**/*.ts",
+		"./scripts/**/*.ts",
+		"*.cjs",
+		".*.cjs",
+		"*.js",
+		"*.ts",
+		"**/*.tsx"
+	]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
